# resume-builder

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py
app/configs/: db_config.py
app/db/: resume_builder.db
app/routers/auth/: google_auth.py
app/routers/core/: cv_generator.py  education.py  job_experience.py  languages.py  personal_information.py  skills.py
app/templates/: example_cv.html
app/utils/: auth_utils.py
